# gegene

./: .gitignore  Cargo.toml  identify.py  rook_bishop_moves.txt
benches/: my_benchmark.rs
src/: bitboard.rs  bmi.rs  board.rs  game.rs  lib.rs  lookup.rs  main.rs  move.rs  pdep.rs  pext.rs  piece.rs  role.rs  score.rs  search.rs  uci.rs  values.rs
src/lookup/: bishop_mask.rs  bishop_moves.rs  direction_mask.rs  extended_bishop_mask.rs  king.rs  knight.rs  pin_mask.rs  rook_mask.rs  rook_moves.rs  zobrist.rs
tests/: move_test.rs  perft_test.rs
