[package]
name = "gegene"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
duplicate = "1.0.0"
num-format = "0.4.4"
clap = { version = "4.4.14", features = ["derive"] }
rand = "0.8.5"
flamegraph = "0.6.5"
hashbrown = "0.14.3"
